Enhance analysis tools and logging for pipeline monitoring
- Updated `.gitignore` to prevent tracking of nested analysis directories and additional JSON files.
- Added `get_output_path` utility to streamline output file handling across various analysis scripts.
- Introduced `PipelineMonitor` class for comprehensive monitoring of pipeline execution, including status checks, error tracking, and throughput analysis.
- Implemented detailed logging and reporting in various analysis scripts, ensuring consistent output paths and improved error handling.
- Removed obsolete scripts related to pipeline status checking and recent logs analysis.

--- a/.gitignore
+++ b/.gitignore
@@ -196,6 +196,9 @@ cython_debug/
 
 # Analysis output files
 analysis/*.json
+analysis/**/*.json
+# Prevent nested analysis directories
+analysis/analysis/
 
 # Cache and checkpoint directories
 data/cache/
