added api authentication

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,5 @@ ELASTIC_HOST=http://localhost:9200
 ENVIRONMENT=localhost  # Change to dev, preprod, prod in respective environments
 ELASTIC_LOGS_INDEX_FRONTEND=logs-frontend
 ELASTIC_LOGS_INDEX_PIPELINE=logs-pipeline
+
+LEX_API_KEY=token-abcd1234
