Add data export dependencies
- Add pandas for dataframe operations
- Add pyarrow for Parquet export support
- Add tqdm for progress bars
- Update lockfile

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,15 @@ dependencies = [
     "fastapi-mcp>=0.3.3",
     "lxml>=5.4.0",
     "mcp-proxy>=0.5.1",
+    "pandas>=2.3.2",
+    "pyarrow>=21.0.0",
     "pydantic>=2.11.3",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
     "requests-cache>=1.2.1",
     "requests-ratelimiter>=0.7.0",
     "tenacity>=9.1.2",
+    "tqdm>=4.67.1",
     "uvicorn>=0.34.2",
     "xmltodict>=0.14.2",
 ]
