Update gitignore to exclude data exports
Add data/exports/ to gitignore to prevent committing exported data files

--- a/.gitignore
+++ b/.gitignore
@@ -204,5 +204,8 @@ analysis/analysis/
 data/cache/
 data/checkpoints/
 
+# Export directories
+data/exports/
+
 CLAUDE.md
 .claude/settings.local.json
