Remove Elasticsearch references from documentation
- Update all docs to reflect Qdrant-only architecture
- Remove ELASTIC_* environment variables from .env.example
- Update data flow diagrams across all READMEs
- Move DEEP_RESEARCH_TOOL_UX_PLAN.md to docs/
- Remove CLAUDE.md from version control (keep local)

--- a/.env.example
+++ b/.env.example
@@ -7,23 +7,5 @@ AZURE_RESOURCE_NAME=
 AZURE_OPENAI_EMBEDDING_MODEL=text-embedding-3-large
 OPENAI_API_VERSION=2024-12-01-preview
 
-
-
-# Elasticsearch configuration
-ELASTIC_MODE=local
-# ELASTIC_MODE=cloud  # Uncomment to use Elastic Cloud instead of local
-
-# Local Elasticsearch settings (used when ELASTIC_MODE=local)
-ELASTIC_HOST=http://localhost:9200
-
-# Elastic Cloud settings (used when ELASTIC_MODE=cloud)
-# ELASTIC_CLOUD_ID=your-deployment-id:region
-# ELASTIC_API_KEY=your-api-key
-# Or use username/password instead of API key
-# ELASTIC_USERNAME=elastic
-# ELASTIC_PASSWORD=your-password
-
-# Elasticsearch logging configuration
+# Environment configuration
 ENVIRONMENT=localhost  # Change to dev, preprod, prod in respective environments
-ELASTIC_LOGS_INDEX_FRONTEND=logs-frontend
-ELASTIC_LOGS_INDEX_PIPELINE=logs-pipeline
