--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "pydantic>=2.11.3",
     "python-dotenv>=1.1.0",
     "qdrant-client>=1.12.0",
+    "redis>=5.0.0",
     "requests>=2.32.3",
     "requests-cache>=1.2.1",
     "requests-ratelimiter>=0.7.0",
