--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,13 @@ dependencies = [
     "qdrant-client>=1.12.0",
     "redis>=5.0.0",
     "requests>=2.32.3",
+    "azure-monitor-opentelemetry>=1.1.1",
+    "opentelemetry-api>=1.10.0",
+    "opentelemetry-sdk>=1.10.0",
+    "opentelemetry-instrumentation-fastapi>=0.41b0",
+    "opentelemetry-instrumentation-httpx>=0.41b0",
+    "opentelemetry-instrumentation-redis>=0.41b0",
+    "opentelemetry-instrumentation-requests>=0.41b0",
     "requests-cache>=1.2.1",
     "requests-ratelimiter>=0.7.0",
     "tenacity>=9.1.2",
