--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,10 +50,12 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "ipykernel>=6.29.5",
+    "mypy>=1.18.2",
     "pytest>=8.3.5",
     "pytest-cov>=6.1.1",
     "pytest-mock>=3.14.0",
     "pytest-xdist>=3.6.1",
+    "types-requests>=2.32.4.20250913",
 ]
 
 [tool.ruff]
