--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "pandas>=2.3.2",
     "pyarrow>=21.0.0",
     "pydantic>=2.11.3",
+    "pypdf>=5.1.0",
     "python-dotenv>=1.1.0",
     "qdrant-client>=1.12.0",
     "redis>=5.0.0",
